# web_software_design

./: .gitignore  CMakeLists.txt  HP_GUI.py  My_console.cpp  My_console.h  README.md  S_client.cpp  S_server.cpp  client_GUI.py  qt_client_dialog_main.cpp  qt_server_dialog_main.cpp
database/client/default/: something_bigger.txt
database/server/: user_sheet.csv
database_tmp/client_data/default/: something.txt
database_tmp/server_data/: user_sheet.csv
src/: client_main.cpp  client_source.cpp  client_source.h  common_definition.h  link.qrc  my_generic_definition.h  server_main.cpp  server_source.cpp  server_source.h
src/Client/: client_socket_handle.cpp  client_socket_handle.h  qt_client_dialog.cpp  qt_client_dialog.h  qt_client_dialog.ui  qt_client_file_handle_dialog.cpp  qt_client_file_handle_dialog.h  qt_client_file_handle_dialog.ui
src/Server/: qt_server_dialog.cpp  qt_server_dialog.h  qt_server_dialog.ui  server_socket_handle.cpp  server_socket_handle.h
